# hust_schedule_ical

./: .gitignore  Cargo.toml  README.md  class-times-fall.json  class-times-summer.json  class-times.example.json  class-times.json  sample-schedule.json  settings.json
.github/workflows/: release.yml
src/: cli.rs  fetch.rs  ical.rs  main.rs  settings.rs  types.rs
