[package]
name = "hust_schedule_ical"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rookie = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.24"
